--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,16 @@
-<div class="main-title"> 
-  Build a better world, starting with people awereness.
-</div>
+<nav class="navbar navbar-expand-md main-title">
+    <a class="navbar-brand">
+        Build a better world, starting with people awareness.
+    </a>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link">world</a></li>
+        <li class="nav-item"><a class="nav-link">world</a></li>
+        <li class="nav-item"><a class="nav-link">world</a></li>
+    </ul>
+    <ul class="navbar-nav ml-5">
+        <li class="nav-item"><a class="nav-link">signin</a></li>
+        <li class="nav-item"><a class="nav-link">signup</a></li>
+        <li class="nav-item"><a class="nav-link">signout</a></li>
+    </ul>
+</nav>
+
