--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,54 @@
-<p>
-  signup works!
-</p>
+<div class="row mt-4">
+  <div class="col-xs-12 col-sm-10 col-md-12 col-sm-offset-8 col-md-offset-8">
+    <form (ngSubmit)="onSignup(f)" #f="ngForm">
+      <div class="form-group">
+        <label for="email">Mail</label>
+        <input 
+          type="email" 
+          id="email" 
+          name="email" 
+          [(ngModel)] = user.email
+          class="form-control"
+          required
+          email
+          #email="ngModel"
+          >
+          <div class="form-text text-muted text-muted-error" *ngIf="!email.valid && email.touched" >
+            please enter a valid email
+          </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          ngModel
+          class="form-control"
+          required
+          #password="ngModel"
+          >
+          <div class="form-text text-muted text-muted-error" *ngIf="!password.valid && password.touched" >
+              password is required
+          </div>
+      </div>      
+      <div class="form-group">
+        <label for="stateCode">State id code:</label>
+        <input
+          type="text"
+          id="stateCode"
+          name="stateCode"
+          ngModel
+          class="form-control"
+          required
+          #stateIdCode="ngModel"
+          >
+          <div class="form-text text-muted text-muted-error" *ngIf="!stateIdCode.valid && stateIdCode.touched" >
+              State id code is required
+          </div>
+      </div>
+      <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign Up</button>
+    </form>
+  </div>
+</div>
+
