--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,14 +3,15 @@
         Build a better world, starting with people awareness.
     </a>
     <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link">world</a></li>
-        <li class="nav-item"><a class="nav-link">world</a></li>
-        <li class="nav-item"><a class="nav-link">world</a></li>
+        <li class="nav-item" routerLinkActive="active"><a routerLink="" class="nav-link">world</a></li>
+        <li class="nav-item" ><a class="nav-link">nation</a></li>
+        <li class="nav-item"><a class="nav-link">city</a></li>
+        <li class="nav-item"><a class="nav-link">zone</a></li>
     </ul>
     <ul class="navbar-nav ml-5">
-        <li class="nav-item"><a class="nav-link">signin</a></li>
-        <li class="nav-item"><a class="nav-link">signup</a></li>
-        <li class="nav-item"><a class="nav-link">signout</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="signin">signin</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="signup">signup</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="signout">signout</a></li>
     </ul>
 </nav>
 
