--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -16,7 +16,7 @@
         </li>
     </ul>
     <ng-template #showLogin>
-        <ul>
+        <ul class="navbar-nav ml-5" >
             <li class="nav-item"><a class="nav-link" routerLink="signin">signin</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="signup">signup</a></li>
         </ul>
