--- a/src/app/user/userdetails/userdetails.component.html
+++ b/src/app/user/userdetails/userdetails.component.html
@@ -52,9 +52,9 @@
           required>
           <div class="form-text text-muted text-muted-error" *ngIf="!city.valid && city.touched" >
               please enter the city where you live
-            </div>
+          </div>
       </div>
-      <button type="submit" class="btn btn-success" [disabled]="!f.valid">Save Changes</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Save Changes</button>
 
     </form>
   </div>
